# deprecated_org.webosinternals.service.update

./: CMakeLists.txt  README.md
files/launch/: org.webosinternals.service.update.in
files/sysbus/: org.webosinternals.service.update.json.prv  org.webosinternals.service.update.json.pub.in  org.webosinternals.service.update.service.prv  org.webosinternals.service.update.service.prv.in
src/: luna_service_utils.h  main.c
